[DOCS] Fix/improve section identification & navigation
The migration from the previous documentation toolchain to the current
toolchain introduced several problems regarding document sections:

* Section IDs changed, leaving most links to sections broken.
* Clicking the "link" icon next to a heading loads a broken URL when the
  current URL already contains a fragment ID.
* When loading a specific section, the section's header is not visible
  and requires scrolling up to see it.
* Clicking a link in the in-page table of contents scrolls to the
  section, but does not update the current URL or browser history stack
* When the URL contains a fragment ID, the corresponding section is not
  highlighted in any way.
* The logic used to generate IDs for sections was fragile, resulting in
  section IDs changing when headings were added or changed in unrelated
  parts of the documents. This lead to authors breaking links to
  sections without realizing it.

Therefore, apply the following fixes and improvements:

* Restore the previous logic for generating section IDs, fixing links
  to sections migrated from the previous toolchain and making links to
  sections reliable moving forward.
* Fix the href of the "link" icon when a fragment ID is already present.
* Use the default browser behavior for links within the table of
  contents, which ensures the current URL, browser history, and scroll
  position all work as expected.
* Apply styles that fix the scroll position when a fragment ID is
  present and highlight the selected section (by showing its "link"
  icon).

WORKAREA-63

No changelog

--- a/docs/source/stylesheets/_components.scss
+++ b/docs/source/stylesheets/_components.scss
@@ -619,7 +619,8 @@
   opacity: 0;
   transition: opacity $animation-speed;
 
-  .heading:hover &, h2:hover &, h3:hover &, h4:hover &, h5:hover &, h6:hover & {
+  .heading:hover &, h2:hover &, h3:hover &, h4:hover &, h5:hover &, h6:hover &,
+  .heading:target &, h2:target &, h3:target &, h4:target &, h5:target &, h6:target & {
     opacity: 1;
   }
 }
